--- a/src/Partials/_products.scss
+++ b/src/Partials/_products.scss
@@ -1,5 +1,4 @@
 .products {
-  padding: 150px 0;
   .items-wrapper {
     display: flex;
 
